# Conteneurisation-Orchestration

./: .env.example  .gitignore  README.md  conftest.py  docker-compose.yaml  dockerfile  pyproject.toml  pytest.ini  requirements.txt  useful-cmd.md
.github/: zensical.toml
.github/docs/: context.md  index.md  link.md  links.md  objectives.md  opt-task.md  tasks.md
.github/site/: 404.html  index.html  search.json
.github/site/context/: index.html
.github/site/link/: index.html
.github/site/links/: index.html
.github/site/objectives/: index.html
.github/site/opt-task/: index.html
.github/site/tasks/: index.html
.github/workflows/: build.yaml  pr.yaml  versions.yaml
backend/: __init__.py
backend/src/: temp.py
backend/src/etl/: extract.py  log_config.py  test.py  transform.py
backend/src/tests/: conftest.py  test_extract.py
cfg/backend/: __init__.py
cfg/backend/classes/: cars.py  logs.py
cfg/db/: __init__.py
cfg/db/backup/: backup.sh
cfg/db/backup/files/: 15-11-2025.json
cfg/db/classes/: connect.py  doctrine.py
cfg/db/classes/connect/: connect.py  connectAdmin.py
cfg/db/classes/doctrine/: select.py
cfg/db/test/: testconnect.py  testdelete.py  testinsert.py  testselect.py  testupdate.py
cfg/schemas/1-logs/: logs-v1.json
cfg/schemas/2-cars/: cars-v1.json
src/etl/: extract.py
