[project]
name="Conteneurisation-Orchestration"
version="1.4.3"
authors=[
    {name = "AGOSTINO Romeo"}, 
    {name = "BIGAND Theo"}, 
    {name = "DRAME Moussa"}, 
    {name = "AUDIBERT Mathieu"}
]
readme="README.md"
requires-python=">=3.10"

[build-system]
requires=["setuptools", "setuptools-scm"]
build-backend="setuptools.build_meta"

[tool.setuptools.packages.find]
where=["cfg"]

[tool.setuptools.package-dir]
"cfg.backend"="cfg/backend"
"cfg.db"="cfg/db"