[project]
name="Conteneurisation-Orchestration"
version="1.5.3"
authors=[
    {name = "AGOSTINO Romeo"}, 
    {name = "BIGAND Theo"}, 
    {name = "DRAME Moussa"}, 
    {name = "AUDIBERT Mathieu"}
]
readme="README.md"
requires-python=">=3.10"

[build-system]
requires=["setuptools", "setuptools-scm"]
build-backend="setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cfg*"]